methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:1: error: ')' expected but '(' found.
override def run:(            growFlowers()
                                         ^FlowerCase:2: error: identifier expected but ')' found.
            gauche()
                   ^FlowerCase:148: error: ')' expected but '}' found.
}
^